--- a/tenant-portal-frontend/src/app/tabs/tabs.page.html
+++ b/tenant-portal-frontend/src/app/tabs/tabs.page.html
@@ -1,20 +1,15 @@
 <ion-tabs>
+  <ion-router-outlet></ion-router-outlet>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="dashboards" [routerLink]="['/tabs/dashboards']">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>{{ 'TABS.DASHBOARDS' | translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="reports" [routerLink]="['/tabs/reports']">
+      <ion-icon name="stats-chart-outline"></ion-icon>
+      <ion-label>{{ 'TABS.REPORTS' | translate }}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
