--- a/tenant-portal-frontend/src/app/shared/change-password-modal/change-password-modal.component.html
+++ b/tenant-portal-frontend/src/app/shared/change-password-modal/change-password-modal.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ 'PW.TITLE' | translate }}</ion-title>
+    <ion-title>{{ 'CHANGE_PW.TITLE' | translate }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button fill="clear" (click)="close()">
+      <ion-button (click)="dismiss()">
         <ion-icon name="close-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -10,36 +10,38 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <form [formGroup]="form">
-    <ion-item>
-      <ion-input
-        type="password"
-        [label]="'PW.OLD' | translate"
-        labelPlacement="stacked"
-        formControlName="oldPassword">
-      </ion-input>
-    </ion-item>
+  <ion-item>
+    <ion-input
+      [label]="'CHANGE_PW.OLD' | translate"
+      labelPlacement="stacked"
+      type="password"
+      [(ngModel)]="oldPassword"
+    ></ion-input>
+  </ion-item>
 
-    <ion-item>
-      <ion-input
-        type="password"
-        [label]="'PW.NEW' | translate"
-        labelPlacement="stacked"
-        formControlName="newPassword">
-      </ion-input>
-    </ion-item>
+  <ion-item>
+    <ion-input
+      [label]="'CHANGE_PW.NEW' | translate"
+      labelPlacement="stacked"
+      type="password"
+      [(ngModel)]="newPassword"
+    ></ion-input>
+  </ion-item>
 
-    <ion-item>
-      <ion-input
-        type="password"
-        [label]="'PW.CONFIRM' | translate"
-        labelPlacement="stacked"
-        formControlName="confirmPassword">
-      </ion-input>
-    </ion-item>
+  <ion-item>
+    <ion-input
+      [label]="'CHANGE_PW.CONFIRM' | translate"
+      labelPlacement="stacked"
+      type="password"
+      [(ngModel)]="confirmPassword"
+    ></ion-input>
+  </ion-item>
 
-    <ion-button expand="block" class="ion-margin-top" (click)="submit()">
-      {{ 'COMMON.SAVE' | translate }}
-    </ion-button>
-  </form>
+  <ion-button expand="block" fill="outline" (click)="dismiss()">
+    {{ 'CHANGE_PW.CANCEL' | translate }}
+  </ion-button>
+
+  <ion-button expand="block" (click)="save()" [disabled]="saving">
+    {{ 'CHANGE_PW.SAVE' | translate }}
+  </ion-button>
 </ion-content>
