--- a/tenant-portal-frontend/src/app/pages/tabs/tabs.page.html
+++ b/tenant-portal-frontend/src/app/pages/tabs/tabs.page.html
@@ -1,13 +1,18 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="dashboards">
-      <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Dashboards</ion-label>
+    <ion-tab-button tab="dashboards" [routerLink]="['/tabs/dashboards']">
+      <ion-icon name="bar-chart-outline"></ion-icon>
+      <ion-label>{{ 'TABS.DASHBOARDS' | translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="reports">
-      <ion-icon name="stats-chart-outline"></ion-icon>
-      <ion-label>Reports</ion-label>
+    <ion-tab-button tab="reports" [routerLink]="['/tabs/reports']">
+      <ion-icon name="document-text-outline"></ion-icon>
+      <ion-label>{{ 'TABS.REPORTS' | translate }}</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="profile" [routerLink]="['/tabs/profile']">
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>{{ 'TABS.PROFILE' | translate }}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
