--- a/tenant-portal-frontend/src/app/pages/profile/profile.page.html
+++ b/tenant-portal-frontend/src/app/pages/profile/profile.page.html
@@ -1,39 +1,65 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="app-toolbar">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/dashboards"></ion-back-button>
+    </ion-buttons>
+
     <ion-title>{{ 'PROFILE.TITLE' | translate }}</ion-title>
+
     <ion-buttons slot="end">
       <ion-button (click)="logout()">
-        <ion-icon name="log-out-outline" slot="start"></ion-icon>
-        {{ 'PROFILE.LOGOUT' | translate }}
+        <ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
+  <ion-card class="card-soft">
     <ion-card-header>
-      <ion-card-title>{{ 'PROFILE.LANGUAGE' | translate }}</ion-card-title>
+      <ion-card-title>{{ 'PROFILE.PERSONAL_DATA' | translate }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item lines="none">
+        <ion-input label="Name" labelPlacement="stacked" [(ngModel)]="name"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-input label="E-Mail" labelPlacement="stacked" [(ngModel)]="email"></ion-input>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card class="card-soft">
+    <ion-card-header>
+      <ion-card-title>{{ 'PROFILE.SECURITY' | translate }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-button fill="outline" expand="block" (click)="openChangePassword()">
+        {{ 'PROFILE.CHANGE_PASSWORD' | translate }}
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card class="card-soft">
+    <ion-card-header>
+      <ion-card-title>{{ 'PROFILE.SETTINGS' | translate }}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item>
-        <ion-label>{{ 'PROFILE.LANGUAGE' | translate }}</ion-label>
-        <ion-select interface="popover" [(ngModel)]="lang" (ionChange)="onLangChange()">
-          <ion-select-option value="de">{{ 'PROFILE.GERMAN' | translate }}</ion-select-option>
-          <ion-select-option value="en">{{ 'PROFILE.ENGLISH' | translate }}</ion-select-option>
+        <ion-select
+          [label]="'PROFILE.LANGUAGE' | translate"
+          labelPlacement="stacked"
+          [(ngModel)]="lang"
+          (ionChange)="onLangChange()"
+        >
+          <ion-select-option value="de">🇩🇪 Deutsch</ion-select-option>
+          <ion-select-option value="en">🇬🇧 English</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{ 'CHANGE_PW.TITLE' | translate }}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-button expand="block" (click)="openChangePassword()">
-        {{ 'CHANGE_PW.OPEN' | translate }}
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
+  <ion-button expand="block" size="large" (click)="save()">
+    {{ 'PROFILE.SAVE' | translate }}
+  </ion-button>
 </ion-content>
