--- a/tenant-portal-frontend/src/app/shared/dsgvo-modal/dsgvo-modal.component.html
+++ b/tenant-portal-frontend/src/app/shared/dsgvo-modal/dsgvo-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ 'DSGVO.TITLE' | translate }}</ion-title>
+    <ion-title>DSGVO</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismiss(false)" aria-label="Close">
         <ion-icon name="close-outline"></ion-icon>
@@ -10,20 +10,29 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card class="card-soft">
+  <p>
+    Bitte akzeptiere die DSGVO, um die App verwenden zu können. Wenn du nicht
+    akzeptierst, wirst du zurück zum Login geschickt.
+  </p>
+
+  <ion-card>
     <ion-card-header>
-      <ion-card-title>{{ 'DSGVO.HEADER' | translate }}</ion-card-title>
+      <ion-card-title>Datenschutz</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p>{{ 'DSGVO.TEXT' | translate }}</p>
-
-      <ion-button color="danger" expand="block" (click)="dismiss(false)">
-        {{ 'DSGVO.DECLINE' | translate }}
-      </ion-button>
-
-      <ion-button color="success" expand="block" (click)="dismiss(true)">
-        {{ 'DSGVO.ACCEPT' | translate }}
-      </ion-button>
+      <ul>
+        <li>Wir speichern lokale Einstellungen (z.B. Sprache, DSGVO-Status).</li>
+        <li>Login-Token wird im Browser gespeichert (localStorage).</li>
+        <li>Keine Weitergabe an Dritte (in diesem Demo-Frontend).</li>
+      </ul>
     </ion-card-content>
   </ion-card>
+
+  <ion-button color="danger" expand="block" (click)="dismiss(false)">
+    Ablehnen
+  </ion-button>
+
+  <ion-button color="success" expand="block" (click)="dismiss(true)">
+    Akzeptieren
+  </ion-button>
 </ion-content>
